baml_language/crates/baml_tests/snapshots/void_return_type/baml_tests__void_return_type__02_parser__void_function_type.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "Callback"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "void"
        WORD "void"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "run_callback"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR "Callback"
          WORD "Callback"
      COMMA ","
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "cb"
          CALL_ARGS "(x)"
            L_PAREN "("
            WORD "x"
            R_PAREN ")"
        SEMICOLON ";"
        WORD "x"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "bad_callback_use"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR "Callback"
          WORD "Callback"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT "let result"
              KW_LET "let"
              WORD "result"
          EQUALS "="
          CALL_EXPR
            WORD "cb"
            CALL_ARGS "(1)"
              L_PAREN "("
              INTEGER_LITERAL "1"
              R_PAREN ")"
          SEMICOLON ";"
        INTEGER_LITERAL "1"
        R_BRACE "}"

=== ERRORS ===
None
