baml_language/crates/baml_tests/snapshots/void_return_type/baml_tests__void_return_type__02_parser__void_return_type.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 37328
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "do_nothing"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "void"
      WORD "void"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR "{
}"
        L_BRACE "{"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "do_return"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "void"
      WORD "void"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT "return;"
          KW_RETURN "return"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "do_bad_return"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "void"
      WORD "void"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT "return 42;"
          KW_RETURN "return"
          INTEGER_LITERAL "42"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "use_void"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "x"
          EQUALS "="
          CALL_EXPR
            WORD "do_nothing"
            CALL_ARGS "()"
              L_PAREN "("
              R_PAREN ")"
          SEMICOLON ";"
        INTEGER_LITERAL "1"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "call_void"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "do_nothing"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        SEMICOLON ";"
        INTEGER_LITERAL "1"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "side_effects"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "void"
      WORD "void"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "y"
          EQUALS "="
          BINARY_EXPR "x + 1"
            WORD "x"
            PLUS "+"
            INTEGER_LITERAL "1"
          SEMICOLON ";"
        WORD "y"
        SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
